--- a/CQDebuger/App.xaml
+++ b/CQDebuger/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CQDebuger"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Window/DebugWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
